--- a/presentation/src/main/res/values-w800dp-land/dimens.xml
+++ b/presentation/src/main/res/values-w800dp-land/dimens.xml
@@ -9,6 +9,6 @@
     <dimen name="text_title_small">24sp</dimen>
     <dimen name="text_subtitle">24sp</dimen>
     <dimen name="text_subtitle_small">16sp</dimen>
-    <dimen name="text_body1">24sp</dimen>
-    <dimen name="text_body1_small">16sp</dimen>
+    <dimen name="text_body">24sp</dimen>
+    <dimen name="text_body_small">16sp</dimen>
 </resources>
