--- a/presentation/src/main/res/values/dimens.xml
+++ b/presentation/src/main/res/values/dimens.xml
@@ -9,6 +9,6 @@
     <dimen name="text_title_small">18sp</dimen>
     <dimen name="text_subtitle">14sp</dimen>
     <dimen name="text_subtitle_small">12sp</dimen>
-    <dimen name="text_body1">14sp</dimen>
-    <dimen name="text_body1_small">12sp</dimen>
+    <dimen name="text_body">14sp</dimen>
+    <dimen name="text_body_small">12sp</dimen>
 </resources>
