--- a/presentation/src/main/res/values/themes.xml
+++ b/presentation/src/main/res/values/themes.xml
@@ -23,4 +23,10 @@
         <item name="android:textColor">@color/white</item>
         <item name="android:textSize">@dimen/text_subtitle</item>
     </style>
+
+    <style name="FullScreen.Dialog" parent="Theme.WorldLine_Android_Technical_Test">
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowFullscreen">false</item>
+        <item name="android:windowIsFloating">false</item>
+    </style>
 </resources>
