--- a/presentation/src/main/res/layout/view_no_data_to_display.xml
+++ b/presentation/src/main/res/layout/view_no_data_to_display.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/view_no_data_to_display"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,11 +8,11 @@
     android:visibility="visible">
 
     <androidx.appcompat.widget.AppCompatTextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         style="@style/TextTitleWhite"
         android:textSize="@dimen/text_title"
-        android:layout_centerHorizontal="true"
+        android:gravity="center_horizontal"
         android:text="@string/no_data_to_display_message"/>
 
-</RelativeLayout>
+</FrameLayout>
