--- a/presentation/src/main/res/layout/view_no_data_to_display.xml
+++ b/presentation/src/main/res/layout/view_no_data_to_display.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="@color/purple_700"
     android:paddingVertical="@dimen/space_normal_x2"
-    android:visibility="visible">
+    android:visibility="gone">
 
     <androidx.appcompat.widget.AppCompatTextView
         android:layout_width="match_parent"
